--- a/src/index.css
+++ b/src/index.css
@@ -322,10 +322,11 @@
   letter-spacing: -0.5px;
 }
 .gray_block {
-  max-width: 180px;
+  width: 90%;
   display: flex;
   height: 120px;
   padding: 16px;
+  margin: 0px;
   flex-direction: column;
   cursor: pointer;
   justify-content: space-between;
@@ -370,6 +371,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
   padding: 0px;
 }
 
@@ -380,7 +382,7 @@
 }
 .gold_block {
   display: flex;
-  max-width: 180px;
+  width: 90%;
   height: 120px;
   padding: 16px;
   flex-direction: column;
@@ -1378,9 +1380,8 @@ button[disabled] {
 
 .mail_content {
   color: white;
-  font-size: 13px;
+  font-size: 14px;
   padding: 8px;
-  letter-spacing: -1px;
   line-height: 19px;
   background: var(
     --Gray-gradient,
